cabal-version:      3.0
name:               bucks
version:            0.1
synopsis:           Money handling library
-- description:
license:            MIT
license-file:       LICENSE
author:             Nick
maintainer:         nick@typeable.io
category:           Data
build-type:         Simple

flag aeson
     description:     Enable Aeson instances
     default:         False
     manual:          True

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Data.Money
                      Data.Money.Currencies
    other-modules:    Data.Money.Internal
    build-depends:    base >=4.14 && < 5.0,
                      groups >= 0.5
    if flag(aeson)
       other-modules: Data.Money.JSON
       build-depends: aeson >= 2.0 && < 3.0
    hs-source-dirs:   src
    default-language: Haskell2010
