cabal-version:      3.0
name:               bucks
version:            0.1
synopsis:           Money handling library
-- description:
license:            MIT
license-file:       LICENSE
author:             Nick
maintainer:         nick@typeable.io
category:           Data
build-type:         Simple

source-repository:  head
  type: git
  location: https://github.com/typeable/bucks.git

flag aeson
     description:     Enable Aeson instances
     default:         False
     manual:          True

flag openapi
     description:     Enable OpenAPI instances
     default:         False
     manual:          True

flag rel8
     description:     Enable Rel8 support
     default:         False
     manual:          True

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Data.Money
                      Data.Money.Currencies
    other-modules:    Data.Money.Internal
    build-depends:    base >=4.14 && < 5.0,
                      groups >= 0.5
    if flag(aeson)
       other-modules: Data.Money.JSON
       build-depends: aeson >= 2.0 && < 3.0
       ghc-options:   -DUSE_AESON
    if flag(openapi)
       other-modules: Data.Money.OpenApi
       build-depends: openapi3
       ghc-options:   -DUSE_OPENAPI
    if flag(rel8)
       other-modules: Data.Money.Rel8
       build-depends: rel8 >= 1.4,
                      scientific
       ghc-options:   -DUSE_REL8
    hs-source-dirs:   src
    default-language: Haskell2010
